--- a/style.css
+++ b/style.css
@@ -1,4 +1,20 @@
 h1 {
   text-align: center;
   color: rosybrown;
+  margin-top: 50px;
+}
+
+input {
+  display: inline-block;
+  margin: 20px;
+}
+
+.contact-btn {
+  display: block;
+  width: 200px;
+  margin-top: 20px;
+}
+
+.container {
+  margin-top: 50px;
 }
